--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,7 +1,13 @@
 # dnsmasq config file that forces Google SafeSearch on, as well as Youtube and Bing searches
-no-resolv
-server=8.8.8.8
-server=8.8.4.4
+
+# Uncomment the lines below if your setup has no other nameserver dnsmasq can query
+# 
+# no-resolv
+# server=8.8.8.8
+# server=8.8.4.4
+#
+
+listen-address=127.0.0.2
 address=/google.com/216.239.38.120
 address=/google.ad/216.239.38.120
 address=/google.ae/216.239.38.120
