--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -8,6 +8,11 @@
 #
 
 listen-address=127.0.0.2
+bind-interfaces
+
+#
+# This is the overrides that force SafeSearch
+#
 address=/google.com/216.239.38.120
 address=/google.ad/216.239.38.120
 address=/google.ae/216.239.38.120
