--- a/squidGuard.conf
+++ b/squidGuard.conf
@@ -41,7 +41,6 @@ dest redirector {
 acl {
         default {
                 pass   !adv !porn !warez !aggressive !violence !spyware !tracker !costtraps !redirector all
-                redirect http://localhost/block.html
+                redirect https://google.com/?q=%t
         }
-
 }
