Use google DNS by default

--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,12 +1,16 @@
 # dnsmasq config file that forces Google SafeSearch on, as well as Youtube and Bing searches
 
-# Uncomment the lines below if your setup has no other nameserver dnsmasq can query
-# 
+# Uncomment the line below to prevent the proxy from using your default nameservers
 # no-resolv
-# server=8.8.8.8
-# server=8.8.4.4
-#
 
+# Add the Google public nameservers to the list of servers to query
+server=8.8.8.8
+server=8.8.4.4
+
+# Query all upstream servers, returning the first received response
+all-servers
+
+# Don't modify these
 listen-address=127.0.0.2
 bind-interfaces
 
