--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,11 +1,11 @@
 # dnsmasq config file that forces Google SafeSearch on, as well as Youtube and Bing searches
 
-# Uncomment the line below to prevent the proxy from using your default nameservers
-# no-resolv
+# Comment the line below to allow the proxy to use your default nameservers
+no-resolv
 
-# Add the Google public nameservers to the list of servers to query
-server=8.8.8.8
-server=8.8.4.4
+# Use the OpenDNS family shield servers
+server=208.67.222.222
+server=208.67.220.220
 
 # Query all upstream servers, returning the first received response
 all-servers
