--- a/squidGuard.conf
+++ b/squidGuard.conf
@@ -9,6 +9,14 @@ dest porn {
         domainlist      BL/porn/domains
         urllist         BL/porn/urls
 }
+dest sex {
+        domainlist      BL/sex/domain
+        urllist         BL/sex/urls
+}
+dest models {
+        domainlist      BL/models/domains
+        urllist         BL/models/urls
+}
 dest warez {
         domainlist      BL/warez/domains
         urllist         BL/warez/urls
@@ -40,7 +48,7 @@ dest redirector {
 
 acl {
         default {
-                pass   !adv !porn !warez !aggressive !violence !spyware !tracker !costtraps !redirector all
+                pass   !adv !porn !sex !models !warez !aggressive !violence !spyware !tracker !costtraps !redirector all
                 redirect https://google.com/?q=%t
         }
 }
